# InferBench

./: .coverage  .gitignore  LICENSE  README.md  RELEASE_NOTES.md  pyproject.toml  run_laptop_benchmark.sh
baseline_results/mi300x_qwen3.6_vllm0.23/: results.md
baseline_results/mi300x_qwen_vllm0.23_v0.1.2/: results.json
baseline_results/mi300x_qwen_vllm0.23_v0.1.3/: results.json  results.md
configs/: example_config.yaml  mock_test.yaml  qwen3.6_mi300x_vllm.yaml  qwen36_2xa100.yaml  qwen36_mi300x.yaml
inferbench/: __main__.py  cli.py
inferbench/adapters/: base.py  openai_api.py
inferbench/cliff/: finder.py
inferbench/config/: schema.py
inferbench/data/eval_sets/: perplexity_wikitext.jsonl
inferbench/data/prompts/: agent_session_trace.jsonl
inferbench/metrics/: collector.py  performance.py
inferbench/results/: fingerprint.py  markdown_exporter.py
inferbench/workloads/: concurrent_uniform.py  mixed.py  shared_prefix.py  single_long.py
inferbench_docs/: BENCH_BLUEPRINT.md  BENCH_METRICS.md  BENCH_SCOPE.md  BENCH_WORKLOADS.md
scripts/: generate_data.py
test_ib/inferbench/: cli.py
test_ib/inferbench/adapters/: openai_api.py
test_ib/inferbench/cliff/: finder.py
test_ib/inferbench/config/: defaults.py
test_ib/inferbench/metrics/: performance.py  quality.py
test_ib/inferbench/workloads/: base.py  concurrent_uniform.py  shared_prefix.py  single_long.py
tests/: mock_server.py  test_adapters.py  test_cli.py  test_cliff_finder.py  test_config.py  test_quality.py  test_reproducibility.py  test_results.py
(+3 files in other folders)
